css/style.css
body {
  font-size: 18px;
  font-family: "Sacramento", sans-serif;
  background: url("../images/background.png");
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 0;
  margin: 0;
  min-height: 100vh;
}

.body-overlay {
  content: "";
  width: 100%;
  height: 100%;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #000000cc;
  z-index: -1;
}

.neonText {
  margin: auto;
  color: #fff;
  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #fecc02,
    0 0 82px #fecc02, 0 0 92px #fecc02, 0 0 102px #fecc02, 0 0 151px #fecc02;
  text-align: center;
  font-weight: 400;
  font-size: 6.2rem;
}

/* START ANIMATED LOGO */
.zee {
  width: 200px;
  height: 200px;
  background-color: #fecc02;
  border-radius: 100%;
  border: 7px solid #2b2a29;
  position: relative;
  overflow: hidden;
}

.band {
  position: absolute;
  width: 90%;
  height: 45%;
}

.band-left {
  left: 0;
  top: 25%;
  background: linear-gradient(to right bottom, #2b2a29 50%, transparent 0);
  animation: arrive-from-left 1s ease-in-out;
}

.band-right {
  right: 0;
  top: 25%;
  background: linear-gradient(to left top, #2b2a29 50%, transparent 0);
  animation: arrive-from-right 1s ease-in-out;
}

@keyframes arrive-from-left {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(0);
  }
}

@keyframes arrive-from-right {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(0);
  }
}
/* END ANIMATED LOGO */

.logo-board {
  text-align: center;
}

.logo-board img {
  width: 50%;
}

@media screen and (max-width: 495px) {
  .neonText {
    font-size: 5.2rem;
  }
}

@media screen and (max-width: 375px) {
  .neonText {
    font-size: 4.2rem;
  }
}

